# Firmware--Pico-JTAG-TFG

./: .gitignore  CMakeLists.txt  README.md  build_all.sh  pico_probe_case.scad  pico_probe_case.stl  pico_probe_case_v3.scad  pico_probe_case_v3.stl  pico_probe_case_v4.scad  pico_probe_case_v4.stl  pico_probe_case_v5.scad  pico_probe_case_v5.stl  pico_sdk_import.cmake  pytest.ini
build_pico2/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  jlink_pico_probe.elf  jlink_pico_probe.uf2  jtag.pio.h
build_pico2/pico-sdk/: cmake_install.cmake
dll/: CMakeLists.txt  JLinkARM.def  JLink_x64.def
dll/build64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  JLink_x64.sln  JLink_x64.vcxproj  JLink_x64.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
dll/build64/Debug/: JLink_x64.exp
dll/build64/JLink_x64.dir/Debug/: JLink_x64.dll.recipe  JLink_x64.ilk
dll/build64/JLink_x64.dir/Debug/JLink_x64.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
dll/build64/JLink_x64.dir/Release/: JLink_x64.dll.recipe
dll/build64/JLink_x64.dir/Release/JLink_x64.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
dll/build64/Release/: JLink_x64.exp  JLink_x64.lib
dll/build64/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
dll/build64/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
dll/build64/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
dll/build64/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  ZERO_CHECK.lastbuildstate
dll/build64/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
dll/build64/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
dll/build64/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
dll/build64/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
dll/src/: com_detect.c  com_detect.h  dll_state.h  jlink_api.c  jlink_types.h  jtag_chain.c  jtag_chain.h  jtag_tap_track.c  jtag_tap_track.h  pico_transport.c  pico_transport.h
src/: main.c
src/board/: board_config.h  clock_init.c  clock_init.h  gpio_init.c  gpio_init.h
src/cdc/: cdc_rx.c  cdc_rx.h  cdc_uart.c  cdc_uart.h  pico_protocol.c  pico_protocol.h
src/jlink/: jlink_caps.c  jlink_caps.h  jlink_handler.c  (+2 more)
tools/: test_usb.py
(+125 files in other folders)
